--- a/SubtitleMonitor/FormMain.resx
+++ b/SubtitleMonitor/FormMain.resx
@@ -120,4 +120,9 @@
   <metadata name="backgroundWorkerMain.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <data name="label2.Text" xml:space="preserve">
+    <value>This application allows you to explore the Subtitle composition in a DVB compliant Transport Stream file.
+
+The application is entirely based upon the source code from the excellent Subtitle Edit open source project.</value>
+  </data>
 </root>
