added early teletext support

--- a/SubtitleMonitor/FormMain.resx
+++ b/SubtitleMonitor/FormMain.resx
@@ -125,4 +125,174 @@
 
 The application is entirely based upon the source code from the excellent Subtitle Edit open source project.</value>
   </data>
+  <metadata name="imageListTreeView.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>201, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAMDAAAAEAIACoJQAAFgAAACgAAAAwAAAAYAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AAAAAF8AAADDAAAA9gAAAMwAAAA2////AP//
+        /wAAAABUAAAA6AAAAOoAAACVAAAA/////wD///8AAAAA/QAAANEAAAD3AAAAxQAAACX///8A////AP//
+        /wD///8AAAAA/////wD///8A////AAAAACMAAAC2AAAA8AAAAPQAAADM////AP///wAAAACTAAAAP///
+        /wAAAABDAAAAk////wD///8AAAAAaQAAAPAAAADt////AP///wD///8A////AAAAALMAAAAoAAAABgAA
+        AEsAAADZ////AP///wAAAADrAAAAPgAAAA0AAABVAAAA/////wD///8AAAAA/wAAABsAAAAIAAAAbwAA
+        AMD///8A////AP///wD///8AAAAA/////wD///8A////AAAAAMUAAABbAAAACv///wD///8A////AP//
+        /wAAAAAGAAAAtQAAAFsAAAC6AAAABv///wD///8AAAAA9QAAACf///8A////AP///wD///8A////AP//
+        /wD///8AAAAAAQAAAE4AAADq////AP///wAAAAD/AAAAAf///wD///8AAAAA/////wD///8AAAAA////
+        /wD///8AAAAACQAAAPX///8A////AP///wD///8AAAAA/////wD///8A////AAAAAPQAAAD/AAAA/wAA
+        AP8AAAD7////AP///wD///8AAAAAMwAAAP8AAAAv////AP///wD///8AAAAA/////wD///8A////AP//
+        /wD///8A////AAAAADgAAAC3AAAA6wAAAMYAAABF////AP///wAAAAD/////AP///wD///8AAAAA////
+        /wD///8AAAAA/wAAAD8AAAAKAAAAWQAAANP///8A////AP///wD///8AAAAA/////wD///8A////AAAA
+        AMEAAABcAAAABwAAAEIAAADQ////AP///wAAAAAGAAAAuwAAAGIAAACwAAAABf///wD///8AAAAA////
+        /wD///8A////AP///wD///8A////AAAAAOIAAABeAAAAB////wD///8A////AP///wAAAAD/////AP//
+        /wD///8AAAAA/////wD///8AAAAA/wAAAKMAAADvAAAA3AAAAD3///8A////AP///wD///8AAAAA////
+        /wD///8A////AAAAACMAAAC8AAAA9AAAANUAAAA4////AP///wAAAACTAAAARv///wAAAABAAAAAkP//
+        /wAAAAD/AAAA/wAAAP8AAAD/////AP///wD///8A////AAAAAOIAAABGAAAABgAAACcAAACn////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8AAAAA/////wD///8A////AP///wD///8A////AP//
+        /wD///8AAAAA/////wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8AAAAA/////wD///8A////AP///wD///8A////AAAAADoAAADLAAAA9gAA
+        AMMAAABi////AP///wD///8A////AP///wD///8A////AP///wD///8AAAAA/////wD///8A////AP//
+        /wD///8AAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/////wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8AAAAA/////wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8AAAAA////
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8Azl8A6c5f
+        AOnOXwDpzl8A6c5fAOnOXwDpzl8A6c5fAOnNXwDqzWAA2s1eAKjLXgBU////AP///wD///8A////AP//
+        /wDNXwDuzV8A685fAOnNYADqzV8A9v///wDNYACFzmAA+c5fAOnOXwDpzl8A6c5fAOnOXwDpzl8A6c5f
+        AOnOXwDpzl8A6c1fAOvNXwDbzV8ApM1gADj///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8AzV4A/81eAP/NXgD/zV0A/8xaAP/MWgD/zFoA/8xaAP/NXQD/zV0A/8xZAP/JUgD/yVIA/8te
+        AFT///8A////AMpdAE3JUAD/zV4A/81eAP/NXgD/ylMA/81eAHX///8AyEwA/8pVAP/LVgD/y1YA/8tW
+        AP/LVgD/y1YA/8tWAP/KVgD/y1YA/8xaAP/NXQD/y1kA/8hMAP/NXwDL////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8AzmAA/85gAP/NXgD/zV8A9s1gANjNYADdzV8A3M5fAOPLWQD/yE4A/8xZ
+        AP/NXwD/zV4A/8dJAP/NYACF////AM1gANfMWwD/zmAA/8xaAP/NXwD/zV4A/8tXAP////8Ay18AWc5e
+        AKDOXwCbzl8Am85fAJvOXwCbzl8Am85fAJvNXwCZzV8Ans1fANzJUAD/zV8A/81fAP/JUQD/zV8AhP//
+        /wD///8A////AP///wD///8A////AP///wD///8AzmAA/85gAP/MWQD/zF4Aq////wD///8A////AP//
+        /wD///8AxFgAGsxfAL/JUAD/zV8A/8lSAP/MXgBfqlUAA8dMAP/NXwD/zFoA/81fALbLVgD/zV8A/8lS
+        AP/NXwBm////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wDNXwBbyVEA/81f
+        AP/NXgD/zV8A8f///wD///8A////AP///wD///8A////AP///wD///8AzmAA/85gAP/MWQD/zF8AtP//
+        /wD///8A////AP///wD///8A////AP///wDMXgCCyVAA/8pUAP////8AzV4AlctXAP/NXwD/x0wA////
+        /wDNYADYzFsA/81dAP/NXwD/////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8Azl8A7s1dAP/NXwD/zV8A/////wD///8A////AP///wD///8A////AP///wD///8AzmAA/85g
+        AP/MWQD/zGAAtP///wD///8A////AP///wD///8A////AP///wD///8AzV8A585fAJv///8AylMA/81e
+        AP/MWwD/zl8A4////wDNYABIyVAA/85gAP/JUQD/yl0AUv///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8AzV8A2sxcAP/NXgD/zl8A6f///wD///8A////AP///wD///8A////AP//
+        /wD///8AzmAA/85gAP/MWQD/zGAAtP///wD///8A////AP///wD///8A////AP///wD///8Ay10AXcle
+        ABPLXwBTyVIA/85gAP/KUwD/zV8AZv///wD///8AzV4A/81dAP/MXAD/zl4A8////wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wDITgAXyE8A/81fAP/KVQD/zV8Ak////wD///8A////AP//
+        /wD///8A////AP///wD///8AzmAA/85gAP/LWQD/zV8As////wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wDNXwDhzFsA/81fAP/ITgD/////AP///wD///8AzF8AdMpUAP/OYAD/yE8A/8pd
+        AD////8A////AP///wD///8AzF4AQcteAGfNXwBhzF4AX81fAJTJUQD/zFwA/8pTAP/NXQD/////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8AzmAA/85gAP/MWQD/y18Asv///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AMpgABjHTAD/zV8A/8xZAP/NXwC5////AP///wD///8A////AMhP
+        AP/NXwD/zFsA/81gAOL///8A////AP///wD///8AzFsALcRAAP/KVAD/ylQA/8tXAP/MXAD/zWAA3cxf
+        AHT///8A////AP///wD///8A////AP///wD///8A////AP///wD///8AzmAA/85gAP/LWQD/zWAAtP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AMxfAKHLWAD/zmAA/8lQAP/MXgA8////AP//
+        /wD///8A////AM5gAKDLVwD/zV8A/8hNAP/LXQAs////AP///wD///8A////AM1gANjHSQD/yU8A/8tX
+        AP/NXwD/zFwA/81gAIr///8A////AP///wD///8A////AP///wD///8A////AP///wD///8AzmAA/85g
+        AP/MWQD/zGAAtP///wD///8A////AP///wD///8A////AP///wD///8A////AMlRAP/NXwD/zV4A/8xa
+        AP////8A////AP///wD///8A////AMROAA3HSwD/zV8A/8xaAP/MXwDP////AP///wD///8A////AP//
+        /wCqVQAGv1kAFMxeAJrJUQD/zV8A/8lQAP/NXgC4////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8AzmAA/85gAP/MWQD/zF8AtP///wD///8A////AP///wD///8A////AP///wD///8Ay14AYspT
+        AP/OYAD/y1YA/81fAI////8A////AP///wD///8A////AP///wDNYADNzFoA/81fAP/HSwD/xFgAGv//
+        /wD///8A////AP///wD///8A////AP///wDNYACyy1kA/81fAP/HSQD/zFUAD////wD///8A////AP//
+        /wD///8A////AP///wD///8AzmAA/85gAP/MWQD/zF8AtP///wD///8A////AP///wD///8A////AP//
+        /wD///8AzFsA/81dAP/NXwD/x0oA/8NaABH///8A////AP///wD///8A////AP///wDIYAA4yE4A/85g
+        AP/MWQD/zV8AvP///wD///8A////AP///wD///8A////AP///wDNXgBRylQA/85gAP/KUwD/zGAAVf//
+        /wD///8A////AP///wD///8A////AP///wD///8AzmAA/85gAP/MWQD/zV4Arf///wD///8A////AP//
+        /wD///8A////AMNaABHOXwDzzFoA/85gAP/LVwD/zV8Aw////wD///8A////AP///wD///8A////AP//
+        /wD///8AzV8A9s1cAP/NXwD/x0sA/6oqAAb///8A////AP///wD///8A////AP///wDNYACoy1gA/85g
+        AP/KUwD/zGAAVf///wD///8A////AP///wD///8A////AP///wD///8AzmAA/85gAP/NXQD/zV8A5c1f
+        AJ7NYACnzV8Ap85fAKbNYACtzV8A4chNAP/MXAD/zmAA/8xaAP/KVgD/////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8AzF4AZMpTAP/OYAD/zFoA/81gAMDNXABWzV0AYM1dAGDMXgBfzF4Aas1g
+        AMjKUwD/zl8A/81fAP/GSAD/v1AAEP///wD///8A////AP///wD///8A////AP///wD///8AzmAA/85g
+        AP/OYAD/zV0A/8tYAP/LWAD/y1gA/8tYAP/LWQD/zFwA/81eAP/MWgD/yVAA/81fAPQAAAAB////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AMlTAP/NXgD/zmAA/8xaAP/KVAD/ylQA/8pU
+        AP/KVAD/ylUA/8xaAP/OXwD/zV0A/8hNAP/OYACq////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8AzmAA/85gAP/OYAD/zmAA/85gAP/OYAD/zmAA/85gAP/OYAD/zV8A/81gAPfNXwC5zV0ATf//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AMxfAIHLVgD/zmAA/85g
+        AP/OYAD/zmAA/85gAP/OYAD/zmAA/85fAP/NXQD/zl8A485eAGL///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///////8AAP///////wAA////////
+        AAD///////8AAP///////wAA////////AAD///////8AAP///////wAA////////AAD///////8AAP//
+        /////wAA////////AADBgwe4MmMAAMGDB7jwZwAA8ZtnuDjvAADBuwe4MG8AAMe7B7gyQwAAwf9/v//v
+        AADB/3wH/+8AAP//f////wAA////////AAD///////8AAP///////wAA////////AAD///////8AAP//
+        /////wAA////////AAD///////8AAPAA+CAAPwAA8AAwEAAfAADwABAQAA8AAPD4AA/+DwAA8P4hD/8P
+        AADw/yEH/w8AAPD/AYf+DwAA8P/Dg8AfAADw/4PDwD8AAPD/g8HgPwAA8P+HwfAfAADw/wfg/g8AAPD/
+        B+D+DwAA8PwP8H4PAADwAB/wAA8AAPAAH/gAHwAA8AB/+AA/AAD///////8AAP///////wAA////////
+        AAA=
+</value>
+  </data>
 </root>
